<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity"
    android:background="@drawable/listcolorbackground"

    android:id="@+id/quizBackground">

     <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/popescu_georgiana_txtview_hellouser"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:text="@string/hello_user"
    android:textStyle="bold"
    android:fontFamily="casual"
    android:textSize="20sp"
    android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/popescu_georgiana_quiz_txtview_totalquestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:textColor="#2196F3"
        android:text="@string/numarul_de_intrebari"
        android:textStyle="bold|italic"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popescu_georgiana_txtview_hellouser" />

    <TextView
        android:id="@+id/popescu_georgiana_quiz_txtview_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="cursive"
        android:textSize="18sp"
        android:text="@string/intrebarea"
        android:textColor="#009688"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popescu_georgiana_quiz_txtview_totalquestions" />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/popescu_georgiana_quiz_btnAnswer1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popescu_georgiana_quiz_txtview_question"
        android:text="@string/answer1"
        android:textColor="#46DAED"
        android:textStyle="bold"
        android:background="@color/white"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"

       />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/popescu_georgiana_quiz_btnAnswer2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popescu_georgiana_quiz_btnAnswer1"
        android:text="@string/answer2"
        android:textColor="#FFEB3B"
        android:textStyle="bold"
        android:background="@color/white"

        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/popescu_georgiana_quiz_btnAnswer3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popescu_georgiana_quiz_btnAnswer2"
        android:text="@string/answer3"
        android:background="@color/white"
        android:textColor="#FB0707"
        android:textStyle="bold"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/popescu_georgiana_quiz_btnSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/popescu_georgiana_quiz_btnAnswer3"
        android:text="@string/submit"
        android:textColor="#F10A9D"
        android:background="?android:attr/selectableItemBackground"
        />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:id="@+id/popescu_georgiana_quiz_framelayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popescu_georgiana_quiz_btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toTopOf="@id/popescu_georgiana_quiz_btnCorrect"
      >
    </FrameLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/popescu_georgiana_quiz_btnCorrect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/answer_correct"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_quiz_framelayout"
        android:background="@drawable/quizbtnanswer"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>