<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity"
    android:background="@drawable/listcolorbackground"
    android:id="@+id/userBackground">

    <TextView
        android:id="@+id/popescu_georgiana_txtview_user_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:autoSizeTextType="none"
        android:fontFamily="cursive"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/popescu_georgiana_user_edittxt_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_your_name"
        android:id="@+id/popescu_georgiana_user_edittxt_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/popescu_georgiana_btnStart"
        app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_txtview_user_quiz"/>
    />
<androidx.appcompat.widget.AppCompatButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/popescu_georgiana_btnStart"
    android:text="@string/start"
    android:fontFamily="cursive"
    android:textStyle="italic|bold"
    android:textAlignment="gravity"
    android:background="@drawable/btnstart"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_user_edittxt_name"/>
</androidx.constraintlayout.widget.ConstraintLayout>