<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CorrectActivity"
    android:background="@drawable/listcolorbackground"
    android:id="@+id/correctBackground">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct_answer"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:id="@+id/popescu_georgiana_correct_txtview_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
    <TextView
        android:id="@+id/popescu_georgiana_correct_txtview_ans1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rosu"
        android:layout_marginLeft="16dp"
        android:fontFamily="serif"
        android:textStyle="bold|italic"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toEndOf="@id/popescu_georgiana_correct_imgview1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_correct_txtview_title"
        />

    <TextView
        android:id="@+id/popescu_georgiana_correct_txtview_ans2"
        android:layout_width="0dp"
        android:fontFamily="serif"
        android:textStyle="bold|italic"
        android:layout_marginLeft="16dp"
        android:layout_height="wrap_content"
        android:text="@string/_4650"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toEndOf="@id/popescu_georgiana_correct_imgview2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_correct_txtview_ans1"
        />

    <TextView
        android:id="@+id/popescu_georgiana_correct_txtview_ans3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/feteasca_neagr"
        android:fontFamily="serif"
        android:textStyle="bold|italic"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toEndOf="@id/popescu_georgiana_correct_imgview3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_correct_txtview_ans2"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/popescu_georgiana_correct_imgview1"
        android:src="@drawable/ic_baseline_arrow_circle_right_24"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_correct_txtview_title"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:id="@+id/popescu_georgiana_correct_imgview2"
        android:src="@drawable/ic_baseline_arrow_circle_right_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_correct_imgview1"
        app:layout_constraintBottom_toTopOf="@id/popescu_georgiana_correct_imgview3"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:id="@+id/popescu_georgiana_correct_imgview3"
        android:src="@drawable/ic_baseline_arrow_circle_right_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_correct_imgview2"
        app:layout_constraintEnd_toStartOf="@id/popescu_georgiana_correct_txtview_ans3"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/popescu_georgiana_correct_btnRestart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btnanswercolor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_correct_imgviewLight"/>

    <ImageView
        android:id="@+id/popescu_georgiana_correct_imgviewLight"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:srcCompat="@drawable/light_bulb_1458612887g8a"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="118dp"
        app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_correct_imgview3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/popescu_georgiana_correct_btnRestart"/>
</androidx.constraintlayout.widget.ConstraintLayout>